src/eleventy/content/_includes/v23.1/misc/session-vars.md
| Variable name | Description | Initial value | Modify with [`SET`]({% link "{{ page.version.version }}/set-vars.md" %})? | View with [`SHOW`]({% link "{{ page.version.version }}/show-vars.md" %})? |
|---|---|---|---|---|
| <a id="application-name"></a> `application_name` | The current application name for statistics collection. | Empty string, or `cockroach` for sessions from the [built-in SQL client]({% link "{{ page.version.version }}/cockroach-sql.md" %}). | Yes | Yes |
| <a id="bytea-output"></a> `bytea_output` | The [mode for conversions from `STRING` to `BYTES`]({% link "{{ page.version.version }}/bytes.md" %}#supported-conversions). | hex | Yes | Yes |
| <a id="client-min-messages"></a> `client_min_messages` | The severity level of notices displayed in the [SQL shell]({% link "{{ page.version.version }}/cockroach-sql.md" %}). Accepted values include `debug5`, `debug4`, `debug3`, `debug2`, `debug1`, `log`, `notice`, `warning`, and `error`. | `notice` | Yes | Yes |
| <a id="copy-from-atomic-enabled"></a> `copy_from_atomic_enabled` | If set to `on`, [`COPY FROM`]({% link "{{ page.version.version }}/copy.md" %}) statements are committed atomically, matching PostgreSQL behavior. If set to `off`, `COPY FROM` statements are segmented into batches of 100 rows unless issued within an explicit transaction, matching the CockroachDB behavior in versions prior to v22.2. | `on` | Yes | Yes |
| <a id="cost-scans-with-default-col-size"></a> `cost_scans_with_default_col_size` | Whether to prevent the optimizer from considering column size when costing plans. | `false` | Yes | Yes |
| <a id="crdb-version"></a> `crdb_version` | The version of CockroachDB. | <code>CockroachDB OSS <i>version</i></code> | No | Yes |
| <a id="database"></a> `database` | The [current database]({% link "{{ page.version.version }}/sql-name-resolution.md" %}#current-database). | Database in connection string, or empty if not specified. | Yes | Yes |
| <a id="datestyle"></a> `datestyle` | The input string format for [`DATE`]({% link "{{ page.version.version }}/date.md" %}) and [`TIMESTAMP`]({% link "{{ page.version.version }}/timestamp.md" %}) values. Accepted values include `ISO,MDY`, `ISO,DMY`, and `ISO,YMD`. | The value set by the `sql.defaults.datestyle` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) (`ISO,MDY`, by default). | Yes | Yes |
| <a id="default-int-size"></a> `default_int_size` | The size, in bytes, of an [`INT`]({% link "{{ page.version.version }}/int.md" %}) type. | `8` | Yes | Yes |
| <a id="default-text-search-config"></a> `default_text_search_config` | <span class="version-tag">New in v23.1:</span> The dictionary used to normalize tokens and eliminate stop words when calling a [full-text search function]({% link "{{ page.version.version }}/functions-and-operators.md" %}#full-text-search-functions) without a configuration parameter. See [Full-Text Search]({% link "{{ page.version.version }}/full-text-search.md" %}). | `english` | Yes | Yes |
| <a id="default-transaction-isolation"></a> `default_transaction_isolation` | All transactions execute with `SERIALIZABLE` isolation. See [Transactions: Isolation levels]({% link "{{ page.version.version }}/transactions.md" %}#isolation-levels). | `SERIALIZABLE` | No | Yes |
| <a id="default-transaction-priority"></a> `default_transaction_priority` | The default transaction priority for the current session. The supported options are `low`, `normal`, and `high`. | `normal` | Yes | Yes |
| <a id="default-transaction-quality-of-service"></a> `default_transaction_quality_of_service` | The default transaction quality of service for the current session. The supported options are `regular`, `critical`, and `background`. See [Set quality of service level]({% link "{{ page.version.version }}/admission-control.md" %}#set-quality-of-service-level-for-a-session). | `regular` | Yes | Yes |
| <a id="default-transaction-read-only"></a> `default_transaction_read_only` | The default transaction access mode for the current session. <br/>If set to `on`, only read operations are allowed in transactions in the current session; if set to `off`, both read and write operations are allowed. See [`SET TRANSACTION`]({% link "{{ page.version.version }}/set-transaction.md" %}) for more details. | `off` | Yes | Yes |
| <a id="default-transaction-use-follower-reads"></a> `default_transaction_use_follower_reads` | If set to on, all read-only transactions use [`AS OF SYSTEM TIME follower_read_timestamp()`]({% link "{{ page.version.version }}/as-of-system-time.md" %}) to allow the transaction to use follower reads. <br/>If set to `off`, read-only transactions will only use follower reads if an `AS OF SYSTEM TIME` clause is specified in the statement, with an interval of at least 4.8 seconds. | `off` | Yes | Yes |
| <a id="disallow-full-table-scans"></a> `disallow_full_table_scans` | If set to `on`, queries on "large" tables with a row count greater than [`large_full_scan_rows`](#large-full-scan-rows) will not use full table or index scans. If no other query plan is possible, queries will return an error message. This setting does not apply to internal queries, which may plan full table or index scans without checking the session variable. | `off` | Yes | Yes |
| <a id="distsql"></a> `distsql` | The query distribution mode for the session. By default, CockroachDB determines which queries are faster to execute if distributed across multiple nodes, and all other queries are run through the gateway node. | `auto` | Yes | Yes |
| <a id="enable-auto-rehoming"></a> `enable_auto_rehoming` | When enabled, the [home regions]({% link "{{ page.version.version }}/alter-table.md" %}#crdb_region) of rows in [`REGIONAL BY ROW`]({% link "{{ page.version.version }}/alter-table.md" %}#set-the-table-locality-to-regional-by-row) tables are automatically set to the region of the [gateway node]({% link "{{ page.version.version }}/ui-sessions-page.md" %}#session-details-gateway-node) from which any [`UPDATE`]({% link "{{ page.version.version }}/update.md" %}) or [`UPSERT`]({% link "{{ page.version.version }}/upsert.md" %}) statements that operate on those rows originate. | `off` | Yes | Yes |
| <a id="enable-experimental-alter-column-type-general"></a> `enable_experimental_alter_column_type_general` | If `on`, it is possible to [alter column data types]({% link "{{ page.version.version }}/alter-table.md" %}#alter-column-data-types). | `off` | Yes | Yes |
| <a id="enable-implicit-select-for-update"></a> `enable_implicit_select_for_update` | Indicates whether [`UPDATE`]({% link "{{ page.version.version }}/update.md" %}) and [`UPSERT`]({% link "{{ page.version.version }}/upsert.md" %}) statements acquire locks using the `FOR UPDATE` locking mode during their initial row scan, which improves performance for contended workloads.<br/><br/>For more information about how `FOR UPDATE` locking works, see the documentation for [`SELECT FOR UPDATE`]({% link "{{ page.version.version }}/select-for-update.md" %}). | `on` | Yes | Yes |
| <a id="enable-implicit-transaction-for-batch-statements"></a> `enable_implicit_transaction_for_batch_statements` | Indicates whether multiple statements in a single query (a "batch statement") will all run in the same implicit transaction, which matches the PostgreSQL wire protocol. | `on` | Yes | Yes |
| <a id="enable-insert-fast-path"></a> `enable_insert_fast_path` | Indicates whether CockroachDB will use a specialized execution operator for inserting into a table. We recommend leaving this setting `on`. | `on` | Yes | Yes |
| <a id="enable-super-regions"></a> `enable_super_regions` | When enabled, you can define a super region: a set of [database regions]({% link "{{ page.version.version }}/multiregion-overview.md" %}#super-regions) on a multi-region cluster such that your [schema objects]({% link "{{ page.version.version }}/schema-design-overview.md" %}#database-schema-objects) will have all of their [replicas]({% link "{{ page.version.version }}/architecture/overview.md" %}#architecture-replica) stored _only_ in regions that are members of the super region. | `off` | Yes | Yes |
| <a id="enable-zigzag-join"></a> `enable_zigzag_join` | Indicates whether the [cost-based optimizer]({% link "{{ page.version.version }}/cost-based-optimizer.md" %}) will plan certain queries using a zig-zag merge join algorithm, which searches for the desired intersection by jumping back and forth between the indexes based on the fact that after constraining indexes, they share an ordering. | `on` | Yes | Yes |
| <a id="enforce-home-region"></a> `enforce_home_region` | If set to `on`, queries return an error and in some cases a suggested resolution if they cannot run entirely in their home region. This can occur if a query has no home region (for example, if it reads from different home regions in a [regional by row table]({% link "{{ page.version.version }}/table-localities.md" %}#regional-by-row-tables)) or a query's home region differs from the [gateway]({% link "{{ page.version.version }}/architecture/life-of-a-distributed-transaction.md" %}#gateway) region. Note that only tables with `ZONE` [survivability]({% link "{{ page.version.version }}/multiregion-survival-goals.md" %}#when-to-use-zone-vs-region-survival-goals) can be scanned without error when this is enabled. For more information about home regions, see [Table localities]({% link "{{ page.version.version }}/multiregion-overview.md" %}#table-localities).<br/><br/>This feature is in preview. It is subject to change. | `off` | Yes | Yes |
| <a id="enforce-home-region-follower-reads-enabled"></a> `enforce_home_region_follower_reads_enabled` | If `on` while the [`enforce_home_region`]({% link "{{ page.version.version }}/cost-based-optimizer.md" %}#control-whether-queries-are-limited-to-a-single-region) setting is `on`, allows `enforce_home_region` to perform `AS OF SYSTEM TIME` [follower reads]({% link "{{ page.version.version }}/follower-reads.md" %}) to detect and report a query's [home region]({% link "{{ page.version.version }}/multiregion-overview.md" %}#table-localities), if any.<br/><br/>This feature is in preview. It is subject to change. | `off` | Yes | Yes |
| <a id="expect-and-ignore-not-visible-columns-in-copy"></a> `expect_and_ignore_not_visible_columns_in_copy` | If `on`, [`COPY FROM`]({% link "{{ page.version.version }}/copy.md" %}) with no column specifiers will assume that hidden columns are in the copy data, but will ignore them when applying `COPY FROM`. | `off` | Yes | Yes |
| <a id="extra-float-digits"></a> `extra_float_digits` | The number of digits displayed for floating-point values. Only values between `-15` and `3` are supported. | `0` | Yes | Yes |
| <a id="force-savepoint-restart"></a> `force_savepoint_restart` | When set to `true`, allows the [`SAVEPOINT`]({% link "{{ page.version.version }}/savepoint.md" %}) statement to accept any name for a savepoint. | `off` | Yes | Yes |
| <a id="foreign-key-cascades-limit"></a> `foreign_key_cascades_limit` | Limits the number of [cascading operations]({% link "{{ page.version.version }}/foreign-key.md" %}#use-a-foreign-key-constraint-with-cascade) that run as part of a single query. | `10000` | Yes | Yes |
| <a id="idle-in-session-timeout"></a> `idle_in_session_timeout` | Automatically terminates sessions that idle past the specified threshold.<br/><br/>When set to `0`, the session will not timeout. | The value set by the `sql.defaults.idle_in_session_timeout` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) (`0s`, by default). | Yes | Yes |
| <a id="idle-in-transaction-session-timeout"></a> `idle_in_transaction_session_timeout` | Automatically terminates sessions that are idle in a transaction past the specified threshold.<br/><br/>When set to `0`, the session will not timeout. | The value set by the `sql.defaults.idle_in_transaction_session_timeout` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) (0s, by default). | Yes | Yes |
| <a id="index-recommendations-enabled"></a> `index_recommendations_enabled` | If `true`, display recommendations to create indexes required to eliminate full table scans. <br/>For more details, see [Default statement plans]({% link "{{ page.version.version }}/explain.md" %}#default-statement-plans). | `true` | Yes | Yes |
| <a id="inject-retry-errors-enabled"></a> `inject_retry_errors_enabled` | If `true`, any statement executed inside of an explicit transaction (with the exception of [`SET`]({% link "{{ page.version.version }}/set-vars.md" %}) statements) will return a transaction retry error. If the client retries the transaction using the special [`cockroach_restart SAVEPOINT` name]({% link "{{ page.version.version }}/savepoint.md" %}#savepoints-for-client-side-transaction-retries), after the 3rd retry error, the transaction will proceed as normal. Otherwise, the errors will continue until `inject_retry_errors_enabled` is set to `false`. For more details, see [Test transaction retry logic]({% link "{{ page.version.version }}/transaction-retry-error-example.md" %}#test-transaction-retry-logic). | `false` | Yes | Yes |
| <a id="intervalstyle"></a> `intervalstyle` | The input string format for [`INTERVAL`]({% link "{{ page.version.version }}/interval.md" %}) values. Accepted values include `postgres`, `iso_8601`, and `sql_standard`. | The value set by the `sql.defaults.intervalstyle` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) (`postgres`, by default). | Yes | Yes |
| <a id="is-superuser"></a> `is_superuser` | If `on` or `true`, the current user is a member of the [`admin` role]({% link "{{ page.version.version }}/security-reference/authorization.md" %}#admin-role). | User-dependent | No | Yes |
| <a id="large-full-scan-rows"></a> `large_full_scan_rows` | Determines which tables are considered "large" such that `disallow_full_table_scans` prevents queries from performing full table or index scans on those tables. The default value is `1000`. To prevent all full table or index scans, set to `0`. | User-dependent | No | Yes |
| <a id="locality"></a> `locality` | The location of the node.<br/></br>For more information, see [Locality]({% link "{{ page.version.version }}/cockroach-start.md" %}#locality). | Node-dependent | No | Yes |
| <a id="lock-timeout"></a> `lock_timeout` | The amount of time a query can spend acquiring or waiting for a single [row-level lock]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#concurrency-control). <br/>In CockroachDB, unlike in PostgreSQL, non-locking reads wait for conflicting locks to be released. As a result, the `lock_timeout` configuration applies to writes, and to locking and non-locking reads in read-write and read-only transactions. <br/>If `lock_timeout = 0`, queries do not timeout due to lock acquisitions. | The value set by the `sql.defaults.lock_timeout` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) (`0`, by default) | Yes | Yes |
| <a id="multiple-active-portals-enabled"></a> `multiple_active_portals_enabled` | Whether to enable the [multiple active portals]({% link "{{ page.version.version }}/postgresql-compatibility.md" %}#multiple-active-portals) pgwire feature. | `false` | Yes | Yes |
| <a id="node-id"></a> `node_id` | The ID of the node currently connected to. <br/><br/>This variable is particularly useful for verifying load balanced connections. | Node-dependent | No | Yes |
| <a id="null-ordered-last"></a> `null_ordered_last` | Set the default ordering of `NULL`s. The default order is `NULL`s first for ascending order and `NULL`s last for descending order. | `false` | Yes | Yes |
| <a id="optimizer-use-forecasts"></a> `optimizer_use_forecasts` | If `on`, the optimizer uses forecasted statistics for query planning. | `on` | Yes | Yes |
| <a id="optimizer-use-histograms"></a> `optimizer_use_histograms` | If `on`, the optimizer uses collected histograms for cardinality estimation. | `on` | No | Yes |
| <a id="optimizer-use-multicol-stats"></a> `optimizer_use_multicol_stats` | If `on`, the optimizer uses collected multi-column statistics for cardinality estimation. | `on` | No | Yes |
| <a id="optimizer-use-not-visible-indexes"></a> `optimizer_use_not_visible_indexes` | If `on`, the optimizer uses not visible indexes for planning. | `off` | No | Yes |
| <a id="pg_trgm_similarity_threshold"></a> `pg_trgm.similarity_threshold` | The threshold above which a [`%`]({% link "{{ page.version.version }}/functions-and-operators.md" %}#operators) string comparison returns `true`. The value must be between `0` and `1`. For more information, see [Trigram Indexes]({% link "{{ page.version.version }}/trigram-indexes.md" %}). | `0.3` | Yes | Yes |
| <a id="prefer-lookup-joins-for-fks"></a> `prefer_lookup_joins_for_fks` | If `on`, the optimizer prefers [`lookup joins`]({% link "{{ page.version.version }}/joins.md" %}#lookup-joins) to [`merge joins`]({% link "{{ page.version.version }}/joins.md" %}#merge-joins) when performing [`foreign key`]({% link "{{ page.version.version }}/foreign-key.md" %}) checks. | `off` | Yes | Yes |
| <a id="reorder-joins-limit"></a> `reorder_joins_limit` | Maximum number of joins that the optimizer will attempt to reorder when searching for an optimal query execution plan. <br/><br/>For more information, see [Join reordering]({% link "{{ page.version.version }}/cost-based-optimizer.md" %}#join-reordering). | `8` | Yes | Yes |
| <a id="require-explicit-primary-keys"></a> `require_explicit_primary_keys` | If `on`, CockroachDB throws an error for all tables created without an explicit primary key defined. | `off` | Yes | Yes |
| <a id="search-path"></a> `search_path` | A list of schemas that will be searched to resolve unqualified table or function names. <br/>For more details, see [SQL name resolution]({% link "{{ page.version.version }}/sql-name-resolution.md" %}). | `public` | Yes | Yes |
| <a id="serial-normalization"></a> `serial_normalization` | Specifies the default handling of [`SERIAL`]({% link "{{ page.version.version }}/serial.md" %}) in table definitions. Valid options include `'rowid'`, `'virtual_sequence'`, `sql_sequence`, `sql_sequence_cached`, and `unordered_rowid`. <br/>If set to `'virtual_sequence'`, the `SERIAL` type auto-creates a sequence for [better compatibility with Hibernate sequences](https://forum.cockroachlabs.com/t/hibernate-sequence-generator-returns-negative-number-and-ignore-unique-rowid/1885). <br/>If set to `sql_sequence_cached`, you can use the `sql.defaults.serial_sequences_cache_size` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) to control the number of values to cache in a user's session, with a default of 256. <br/>If set to `unordered_rowid`, the `SERIAL` type generates a globally unique 64-bit integer (a combination of the insert timestamp and the ID of the node executing the statement) that does not have unique ordering. | `'rowid'` | Yes | Yes |
| <a id="server-version"></a> `server_version` | The version of PostgreSQL that CockroachDB emulates. | Version-dependent | No | Yes |
| <a id="server-version-num"></a> `server_version_num` | The version of PostgreSQL that CockroachDB emulates. | Version-dependent | Yes | Yes |
| <a id="session-id"></a> `session_id` | The ID of the current session. | Session-dependent | No | Yes |
| <a id="session-user"></a> `session_user` | The user connected for the current session. | User in connection string | No | Yes |
| <a id="sql-safe-updates"></a> `sql_safe_updates` | If `false`, potentially unsafe SQL statements are allowed, including `DROP` of a non-empty database and all dependent objects, [`DELETE`]({% link "{{ page.version.version }}/delete.md" %}) without a `WHERE` clause, [`UPDATE`]({% link "{{ page.version.version }}/update.md" %}) without a `WHERE` clause, and [`ALTER TABLE .. DROP COLUMN`]({% link "{{ page.version.version }}/alter-table.md" %}#drop-column). <br/>See [Allow Potentially Unsafe SQL Statements]({% link "{{ page.version.version }}/cockroach-sql.md" %}#allow-potentially-unsafe-sql-statements) for more details. | `true` for interactive sessions from the [built-in SQL client]({% link "{{ page.version.version }}/cockroach-sql.md" %}), <br/>`false` for sessions from other clients | Yes | Yes |
| <a id="statement-timeout"></a> `statement_timeout` | The amount of time a statement can run before being stopped. <br/>This value can be an `int` (e.g., `10`) and will be interpreted as milliseconds. It can also be an interval or string argument, where the string can be parsed as a valid interval (e.g., `'4s'`). <br/>A value of `0` turns it off. | The value set by the `sql.defaults.statement_timeout` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) (`0s`, by default). | Yes | Yes |
| <a id="stub-catalog-tables"></a> `stub_catalog_tables` | If `off`, querying an unimplemented, empty [`pg_catalog`]({% link "{{ page.version.version }}/pg-catalog.md" %}) table will result in an error, as is the case in v20.2 and earlier. If `on`, querying an unimplemented, empty `pg_catalog` table simply returns no rows. | `on` | Yes | Yes |
| <a id="timezone"></a> `timezone` | The default time zone for the current session. This session variable was named `"time zone"` (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `UTC` | Yes | Yes |
| <a id="tracing"></a> `tracing` | The trace recording state. | `off` | | Yes |
| <a id="transaction-isolation"></a> `transaction_isolation` | All transactions execute with `SERIALIZABLE` isolation. See [Transactions: Isolation levels]({% link "{{ page.version.version }}/transactions.md" %}#isolation-levels). This session variable was called `transaction isolation level` (with spaces) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `SERIALIZABLE` | No | Yes |
| <a id="transaction-priority"></a> `transaction_priority` | The priority of the current transaction. See Transactions: Transaction priorities for more details. This session variable was called transaction priority (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `NORMAL` | Yes | Yes |
| <a id="transaction-read-only"></a> `transaction_read_only` | The access mode of the current transaction. See [`SET TRANSACTION`]({% link "{{ page.version.version }}/set-transaction.md" %}) for more details. | `off` | Yes | Yes |
| <a id="transaction-rows-read-err"></a> `transaction_rows_read_err` | The limit for the number of rows read by a SQL transaction. If this value is exceeded the transaction will fail (or the event will be logged to `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a id="transaction-rows-read-log"></a> `transaction_rows_read_log` | The threshold for the number of rows read by a SQL transaction. If this value is exceeded, the event will be logged to `SQL_PERF` (or `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a id="transaction-rows-written-err"></a> `transaction_rows_written_err` | The limit for the number of rows written by a SQL transaction. If this value is exceeded the transaction will fail (or the event will be logged to `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a id="transaction-rows-written-log"></a> `transaction_rows_written_log` | The threshold for the number of rows written by a SQL transaction. If this value is exceeded, the event will be logged to `SQL_PERF` (or `SQL_INTERNAL_PERF` for internal transactions). | `0` | Yes | Yes |
| <a id="transaction-status"></a> `transaction_status` | The state of the current transaction. See [Transactions]({% link "{{ page.version.version }}/transactions.md" %}) for more details. This session variable was called `transaction status` (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL. | `NoTxn` | No | Yes |
| <a id="transaction-timeout"></a> `transaction_timeout` | <span class="version-tag">New in v23.1:</span> Aborts an explicit [transaction]({% link "{{ page.version.version }}/transactions.md" %}) when it runs longer than the configured duration. Stored in milliseconds; can be expressed in milliseconds or as an [`INTERVAL`]({% link "{{ page.version.version }}/interval.md" %}). | `0` | Yes | Yes |
| <a id="troubleshooting_mode_enabled"></a> `troubleshooting_mode_enabled` | When enabled, avoid performing additional work on queries, such as collecting and emitting telemetry data. This session variable is particularly useful when the cluster is experiencing issues, unavailability, or failure. | `off` | Yes | Yes |
| <a id="use_declarative_schema_changer"></a> `use_declarative_schema_changer` | Whether to use the declarative schema changer for supported statements. | `on` | Yes | Yes |
| <a id="vectorize"></a> `vectorize` | The vectorized execution engine mode. Options include `on` and `off`. For more details, see [Configure vectorized execution for CockroachDB]({% link "{{ page.version.version }}/vectorized-execution.md" %}#configure-vectorized-execution). | `on` | Yes | Yes |

The following session variables are exposed only for backwards compatibility with earlier CockroachDB releases and have no impact on how CockroachDB runs:

| Variable name | Initial value | Modify with [`SET`]({% link "{{ page.version.version }}/set-vars.md" %})? | View with [`SHOW`]({% link "{{ page.version.version }}/show-vars.md" %})? |
|---|---|---|---|
| <a id="backslash-quote"></a> `backslash_quote` | `safe_encoding` | No | Yes |
| <a id="client-encoding"></a> `client_encoding` | `UTF8` | No | Yes |
| <a id="default-tablespace"></a> `default_tablespace` | | No | Yes |
| <a id="enable-drop-enum-value"></a> `enable_drop_enum_value` | `off` | Yes | Yes |
| <a id="enable-seqscan"></a> `enable_seqscan` | `on` | Yes | Yes |
| <a id="escape-string-warning"></a> `escape_string_warning` | `on` | No | Yes |
| <a id="experimental-enable-hash-sharded-indexes"></a> `experimental_enable_hash_sharded_indexes` | `off` | Yes | Yes |
| <a id="integer-datetimes"></a> `integer_datetimes` | `on` | No | Yes |
| <a id="max-identifier-length"></a> `max_identifier_length` | `128` | No | Yes |
| <a id="max-index-keys"></a> `max_index_keys` | `32` | No | Yes |
| <a id="row-security"></a> `row_security` | `off` | No | Yes |
| <a id="standard-conforming-strings"></a> `standard_conforming_strings` | `on` | No | Yes |
| <a id="server-encoding"></a> `server_encoding` | `UTF8` | Yes | Yes |
| <a id="synchronize-seqscans"></a> `synchronize_seqscans` | `on` | No | Yes |
| <a id="synchronous-commit"></a> `synchronous_commit` | `on` | Yes | Yes |
